--- a/vignettes/mtraceR_A_quick_introduction.Rmd
+++ b/vignettes/mtraceR_A_quick_introduction.Rmd
@@ -56,7 +56,7 @@ If you use `mtraceR`, please cite:
 Pacioni C, Hunt H, Allentoft ME, et al. (2015) Genetic diversity loss in a biodiversity hotspot: ancient DNA quantifies genetic decline and former connectivity in a critically endangered marsupial. Molecular Ecology, 24, 5813-5828.  
 
 ## ```mtrace```
-Let's assume you have run your analysis. Generally, the first thing you want to know is whether your run was long enough. The function `mtrace`, which is essentially a wrapper of the package `coda` (Plummer et al 2006) to be used for Migrate-n outputs, has this purpose. At the end of your run you will have a bunch of files, among which there is a *bayesallfile*. If you don't have it, this means that you didn't select the option in Migrate-n menu. Note that *bayesallfile* is the default name, but you may have changed it (in the example below is *bayesallfile_ms_3popsSt.gz*). To use this function, you have to provide a number of information: whether you used heating (`heating`), the number of chains you used (`nchain`), the proportion of your MCMC that you want to discard as burnin (`burn.in`), the directory where your *bayesallfile* is (`dir.in`),  whether you want to save the results to disk (`save2disk`) and where to save the result (`dir.out`), which is, obviously, only meaningful if `save2disk=TRUE`. All these arguments should be self-explanatory, so I'll give them for granted. You won't get (a PDF with) the trace plots if you don't use `save2disk=TRUE`, so I recommend that you save the output to disk. The arguments `trim` and `thin` are a bit more cryptic and probably worth a couple of words. If you use `trim=FALSE, thin=1`, `mtrace` will generate plots for all parameters in the bayesallfile for  all the recorded steps. This means that the analysis will take a bit longer and the size of the PDF will be larger (potentially substantially larger). If you use a value > 1  for the argument `thin`, you will be 'thinning' the recorded steps (in the example below by a factor of 10) and the PDF will be smaller and plots will be quicker to display. With `trim` you decide whether to 'trim' the parameter to only theta and M, which of course will make the PDF even smaller and most often than not, it is sufficient to have an idea whether the run was adequate. Here there is an example:
+Let's assume you have run your analysis. Generally, the first thing you want to know is whether your run was long enough. The function `mtrace`, which is essentially a wrapper of the package `coda` (Plummer et al 2006) to be used for Migrate-n outputs, has this purpose. At the end of your run you will have a bunch of files, among which there is a *bayesallfile*. If you don't have it, this means that you didn't select the option in Migrate-n menu. Note that *bayesallfile* is the default name, but you may have changed it (in the example below is *bayesallfile_ms_3popsSt.gz*). To use this function, you have to provide a number of information: whether you used heating (`heating`), the number of chains you used (`nchain`), the proportion of your MCMC that you want to discard as burnin (`burn.in`), the directory where your *bayesallfile* is (`dir.in`),  whether you want to save the results to disk (`save2disk`) and where to save the result (`dir.out`), which is, obviously, only meaningful if `save2disk=TRUE`. All these arguments should be self-explanatory, so I'll give them for granted. You won't get (a PDF with) the trace plots if you don't use `save2disk=TRUE`, so I recommend that you save the output to disk. The arguments `trim_params` and `thin` are a bit more cryptic and probably worth a couple of words. If you use `trim_params=FALSE, thin=1`, `mtrace` will generate plots for all parameters in the bayesallfile for  all the recorded steps. This means that the analysis will take a bit longer and the size of the PDF will be larger (potentially substantially larger). If you use a value > 1  for the argument `thin`, you will be 'thinning' the recorded steps (in the example below by a factor of 10) and the PDF will be smaller and plots will be quicker to display. With `trim_params` you decide whether to 'trim' the parameter to only theta and M, which of course will make the PDF even smaller and most often than not, it is sufficient to have an idea whether the run was adequate. Here there is an example:
 
 ```{r}
 library(mtraceR)
@@ -64,7 +64,7 @@ library(mtraceR)
 data.path <- system.file("extdata", package="mtraceR")
 # run mtrace
 test_microsats <- mtrace(heating=TRUE, nchain=4, burn.in=0.4, dir.in=data.path, 
-                         dir.out=NULL, trim=TRUE, thin=10, save2disk=FALSE, 
+                         dir.out=NULL, trim_params=TRUE, thin=10, save2disk=FALSE, 
                          bayesallfile="bayesallfile_ms_3popsSt.gz")
 ```
 Note that if you leave `dir.in` and  `bayesallfile` with their default values (i.e. `NULL`), an interactive window will pop up to manually select the *bayesallfile*. If you pass a path with `dir.in`, but not a name for `bayesallfile`, `mtrace` will assume that you used Migrate-n default name for *bayesallfile*. If you leave the default `dir.out=NULL`, but `save2disk=TRUE`, `mtrace` will save the results in the same folder where the *bayesallfile* is.
